added job status counts feature
