# Backend/src/dto/JobDto.ts
@@ -58,3 +58,16 @@ export interface getJobsResponseDTO{
   pagination:getJobResponsePaginationDTO
   data:ResponseJobDTO[]
 }
+
+export interface getJobCount{
+  totalJobs:number,
+  openJobs:number,
+  closedJobs:number,
+  holdJobs:number
+}
+
+export interface getJobCountResponseDTO{
+  statusCode:number,
+  message:string,
+  data:getJobCount
+}
