# Backend/src/routes/JobRoutes.ts
@@ -1,7 +1,7 @@
 import { Router } from "express";
 import { validate, validateParams } from "../middleware/Validation";
 import { createJobSchema, paramIdSchema, queryParamsSchema } from "../validator/JobSchemaValidator";
-import { createJobController, deleteJobController, getJobsController, updateJobController } from "../controllers/JobController";
+import { createJobController, deleteJobController, getJobCountsController, getJobsController, updateJobController } from "../controllers/JobController";
 
 const router = Router();
 
@@ -9,4 +9,5 @@ router.post("/newJob",validate(createJobSchema),createJobController);
 router.put("/updateJob/:id",validateParams(paramIdSchema),updateJobController)
 router.delete("/deleteJob/:id",validateParams(paramIdSchema),deleteJobController)
 router.get("/getJobs",getJobsController);
+router.get("/getJobCounts",getJobCountsController)
 export default router
